# 3DGenLab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  hunyuan3d_image_gpu_system.yaml  hunyuan3d_text_gpu.yaml  hunyuan3d_text_gpu_system.yaml  trellis_text_gpu.yaml  triposr_gpu.yaml
configs/ocio/: minimal_config.ocio
dataset/: README.md
dataset/metadata/: cases.json  sources.md
dataset/prompts/: robot_lowpoly.txt  treasure_chest.txt
docs/: REAL_MODEL_ROLLOUT_PLAN.md  TRELLIS_HANDOFF_2026-04-22.md
inputs/prompts/: example.txt
scripts/: benchmark.py  bootstrap.sh  build_demo_manifest.py  hunyuan3d_genlab_infer.py  rebuild_reports_summary.py  render_blender.py  render_smoke.py  run_all_models.py  run_dataset_eval.py  run_full_eval_demo.sh  run_pipeline.py  setup_external_repos.sh  smoke_test.py  trellis_genlab_infer.py  trellis_overnight_bg.sh  trellis_setup_bg.sh
src/genlab/: __init__.py  utils.py
src/genlab/eval/: __init__.py  mesh_metrics.py
src/genlab/models/: __init__.py  base.py  dummy_mesh.py  hunyuan3d_adapter.py  instantmesh_adapter.py  registry.py  trellis_adapter.py  triposr_adapter.py
src/genlab/render/: __init__.py  blender_render.py
